#53 Added bow design tab and refactored laser specific css to be generic for all design tabs

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1776,11 +1776,11 @@ attribute-senses {
 	font-style: italic;
 }
 
-.laser-design-block {
+.design-block {
 	display: flex;
 }
 
-.laser-design-row {
+.design-row {
 	line-height: 27.5px;
 }
 
