--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1803,3 +1803,19 @@ attribute-senses {
 	position: sticky;
 	top: 20px;
 }
+
+.bow-hand {
+	background-color: rgb(225 162 0 / 8%) !important;
+}
+
+.bow-hook {
+	background-color: rgb(70 64 183 / 8%) !important;
+}
+
+.bow-mech {
+	background-color: rgb(0 225 23 / 8%) !important;
+}
+
+.bow-draw-table td, th {
+	border: 2px solid rgb(255 255 255 / 50%);
+}
