#53 Added hints and basic validation for basic bow options.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -189,6 +189,46 @@
                                     </div>
                                 </td>
                             </tr>
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Target Draw Length
+
+                                </td>
+                                <td>
+                                    <input type="number" name="data.bowDesign.targetDrawLength" value="{{data.data.bowDesign.targetDrawLength}}" style="width: 45%" data-dtype="Number"/> / {{data.data.bowDesign.maxDrawLength}}
+                                </td>
+                                <td class="question-container" id="target-draw-length">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Bow Length
+                                </td>
+                                <td>
+                                    <input type="number" name="data.bowDesign.totalBowLength" value="{{data.data.bowDesign.totalBowLength}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="total-bow-length">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Working Percentage
+                                </td>
+                                <td>
+                                    <input type="number" name="data.bowDesign.workingPercentage" value="{{data.data.bowDesign.workingPercentage}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="working-bow-length">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
                         </table>
                     </div>
                     <div style="width: 50%;">
